# Tarea01

./: CMakeLists.txt  Cola.cpp  Cola.h  Gestor.cpp  Gestor.h  Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  Pila.cpp  Pila.h  main.cpp
src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/: Cola.cpp  Cola.h  Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  Pila.cpp  Pila.h
src/mcastaingk/ahidalgoj/cobandol/brutchm/dl/: Gestor.cpp  Gestor.h
src/mcastaingk/ahidalgoj/cobandol/brutchm/ui/: Main.cpp
