cmake_minimum_required(VERSION 3.17)
project(Tarea01)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tarea01 "src/mcastaingk/ahidalgoj/cobandol/brutchm/ui/Main.cpp" "src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/Nodo.cpp" "src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/Nodo.h" "src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/Lista.cpp" "src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/Lista.h" "src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/Pila.cpp" "src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/Pila.h" "src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/Cola.cpp" "src/mcastaingk/ahidalgoj/cobandol/brutchm/bl/Cola.h" "src/mcastaingk/ahidalgoj/cobandol/brutchm/dl/Gestor.cpp"  "src/mcastaingk/ahidalgoj/cobandol/brutchm/dl/Gestor.h")